Major files tree changes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,8 @@ akka {
   stdout-loglevel = "DEBUG"
 }
 
-simulation.host="127.0.0.1"
-simulation.port=22322
-simulation.admin.port=22323
+gines.simulation {
+    host="127.0.0.1"
+    port=22322
+    admin.port=22323
+}
