--- a/src/main/resources/application.conf.sample
+++ b/src/main/resources/application.conf.sample
@@ -1,5 +1,5 @@
-simulation {
+gines.simulation {
     host=127.0.0.1
     port=22322
 }
-simulation.admin.port=22323
+gines.simulation.admin.port=22323
