--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ akka {
 
   # Log level for the very basic logger activated during AkkaApplication startup
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
-  stdout-loglevel = "DEBUG"
+  #stdout-loglevel = "DEBUG"
 }
 
 gines.simulation {
