Add Exposed state, allow immuning part of the population at the beginning of simulation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,13 +21,26 @@ simulation.params {
         height = 30
     }
     virus {
+        # these values specifies a function infectivity*(virusEncounters / curveFactor)
+        # if curveFactor is negative, probability of infection lowers with subsequent
+        # encounters; grows otherwise
         infectivity = 0.05
-        curveFactor = 50
+        curveFactor = -50
     }
     agents {
         initialInfected = 5
+        # if not specified, defaults to 0
+        initialImmune = 0
+        # valid values: "All", "Child", "Teenager", "Adult", "Elderly";
+        # if not specified, defaults to "All"
+        immuneAge = "All"
     }
+    # unit: days
     illness {
         length = 10
+    }
+    # unit: days
+    exposed {
+        length = 1
     }
 }
