Specify maximum number of people that can be infected in one timechunk by one ill person

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,6 +26,10 @@ simulation.params {
         # encounters; grows otherwise
         infectivity = 0.05
         curveFactor = -50
+
+        # defines number of people that can be infected by a single ill person
+        # in one timechunk
+        spreadFactor = 30
     }
     agents {
         initialInfected = 5
